:thread: api data fatched

--- a/itemmanager/index.html
+++ b/itemmanager/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Item Manager</title>
+	<title>Item Manager by Remon Hasan</title>
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
 <body>
@@ -39,6 +39,19 @@
 </nav>
 
 <div class="container">
+	<h1>Add Item</h1>
+	<form id="itemForm">
+		<div class="form-group">
+			<label>Text</label>
+			<input type="text" id="text" class="form-control">	
+		</div>
+		<div class="form-group">
+			<label>Body</label>
+			<textarea type="text" id="body" class="form-control"></textarea> 	
+		</div>
+		<input type="submit" value="submit" class="btn btn-primary">
+	</form>
+	<hr>
 	<ul id="items" class="list-group">
 		
 	</ul>
@@ -50,12 +63,69 @@
   crossorigin="anonymous"></script>
   <script type="text/javascript">
   	$(document).ready(function(){
+  		getItems();
+
+  		// submit event
+  		$('#ItemForm').on('submit',function(e){
+         e.preventDefault();
+
+         let text = ('#text').val();
+         let body = ('#body').val();
+
+         addItem(text,body);
+  		});
+
+  		// delete event 
+
+  		$('body').on('click','.deleteLink' function(e){
+
+  			e.preventDefault();
+  			let id = $(this).date('id');
+  			deleteItem(id);
+
+  		});
+
+  		// delete item through api
+
+  		function deleteItem(id){
+           $.ajax({
+               
+               method : 'POST',
+               url : 'http://localhost:8000/api/items/'+id,
+               data : {_method: 'DELETE'}
+            }).done(function(item){
+               alert('Item Removed')
+               location.reload();
+            });
+  		}
+
+  		// inset item using api
+  		function addItem(text,body){
+            $.ajax({
+               
+               method : 'POST',
+               url : 'http://localhost:8000/api/items',
+               data : {text: text, body: body}
+            }).done(function(item){
+               alert('Item # '+item.id+' added')
+               location.reload();
+            });
+  		}
+
   		// get items from API
        function getItems(){
           $.ajax({
-          	url:"http://localhost:8000/api/items"
+          	url:'http://localhost:8000/api/items'
           }).done(function(items){
-             console.log(items);
+             let output = '';
+             $.each(items,function(key,item){
+                output += `
+                  <li class="list-group-item">
+                  <strong>${item.text} :</strong>${item.body} <a href="#" class="deleteLink" data-id="${item.id}">Delete</a>
+                  </li>
+                `;
+             });
+             $('#item').append(output);
           });
        }
   	});
